# backend/internal/http/v1/private/user.go
@@ -1,6 +1,8 @@
 package private
 
 import (
+	"fmt"
+
 	"github.com/C-dexTeam/codex/internal/domains"
 	dto "github.com/C-dexTeam/codex/internal/http/dtos"
 	"github.com/C-dexTeam/codex/internal/http/response"
@@ -14,6 +16,7 @@ func (h *PrivateHandler) initUserRoutes(root fiber.Router) {
 	user.Post("/profile", h.UpdateProfile)
 	user.Post("/connect", h.ConnectWallet)
 	user.Post("/streak", h.StreakUp)
+	user.Post("/mint/:rewardID", h.MintNFT)
 }
 
 // @Tags User
@@ -97,9 +100,9 @@ func (h *PrivateHandler) ConnectWallet(c *fiber.Ctx) error {
 		return err
 	}
 
-	if err := h.services.UserService().ConnectWallet(c.Context(), userSession.UserID, newWallet.PublicKeyBase58, newWallet.Message, newWallet.Signature); err != nil {
-		return err
-	}
+	// if err := h.services.UserService().ConnectWallet(c.Context(), userSession.UserID, newWallet.PublicKeyBase58, newWallet.Message, newWallet.Signature); err != nil {
+	// 	return err
+	// }
 
 	// Mevcut session'ı alıyoruz
 	sess, err := h.sess_store.Get(c)
@@ -123,6 +126,10 @@ func (h *PrivateHandler) ConnectWallet(c *fiber.Ctx) error {
 		if err := h.services.UserProfileService().ChangeUserRole(c.Context(), userSession.UserProfileID, walletUser.ID.String()); err != nil {
 			return err
 		}
+	}
+
+	if err := h.services.UserService().SetPublicKey(c.Context(), userSession.UserID, newWallet.PublicKeyBase58); err != nil {
+		return err
 	}
 
 	return response.Response(200, "Status OK", nil)
@@ -165,4 +172,37 @@ func (h *PrivateHandler) StreakUp(c *fiber.Ctx) error {
 	}
 
 	return response.Response(200, "Status OK", streak)
+}
+
+// @Tags User
+// @Summary Mint NFT
+// @Description Mint your NFT.
+// @Accept json
+// @Produce json
+// @Param rewardID path string true "Reward ID"
+// @Success 200 {object} response.BaseResponse{}
+// @Router /private/user/mint/{rewardID} [post]
+func (h *PrivateHandler) MintNFT(c *fiber.Ctx) error {
+	sessionID := c.Cookies("session_id")
+	userSession := sessionStore.GetSessionData(c)
+
+	rewardID := c.Params("rewardID")
+
+	reward, err := h.services.RewardService().GetReward(c.Context(), rewardID, "1", "1")
+	if err != nil {
+		return err
+	}
+
+	if userSession.PublicKey == "" {
+		return response.Response(400, "Public Key Required", nil)
+	}
+
+	fmt.Println("MintNFT", reward.Name, reward.Symbol, reward.URI, reward.SellerFee)
+	fmt.Println(userSession.PublicKey)
+	data, err := h.services.UserService().MintNFT(sessionID, userSession.PublicKey, reward.Name, reward.Symbol, reward.URI, reward.SellerFee)
+	if err != nil {
+		return err
+	}
+
+	return response.Response(200, "Status OK", data)
 }
